# Theft_Detection_Bacancy

./: .gitignore  INSTALLATION.md  PROJECT_SUMMARY.md  README.md  compression_module.py  config.yaml  detection_module.py  main.py  mlflow_logger.py  pipeline_manager.py  pyproject.toml  requirements.txt  setup.py  test_basic.py  utils.py  video_compression.py
