[project]
name = "theft-detection-bacancy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=3.6.0",
    "numpy==1.23.5",
    "opencv-python==4.6.0.66",
    "pandas>=2.1.0",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pyyaml>=6.0.3",
    "scipy>=1.15.3",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.228",
]
